--- a/publish-flotte-gbfs/index.html
+++ b/publish-flotte-gbfs/index.html
@@ -84,7 +84,7 @@
 		<li><a href="./flotte-berlin/gbfs.json"><code>gbfs.json</code></a> (GBFS-Version 2.3, <a href="https://creativecommons.org/publicdomain/zero/1.0/"><code>CC0-1.0</code></a>)</li>
 	</ul>
 	<h3>Feed der Leihräder der fLotte Brandenburg</h3>
-		<a href="https://www.flotte-berlin.de" rel="noreferrer noopener"><img id="flotte-brandenburg-logo" src="flotte-brandenburg-logo.png" alt="Logo fLotte Brandenburg" /></a> 
+		<a href="https://flotte-berlin.de/brandenburg/" rel="noreferrer noopener"><img id="flotte-brandenburg-logo" src="flotte-brandenburg-logo.png" alt="Logo fLotte Brandenburg" /></a> 
 	<ul>
 		<li><a href="./flotte-brandenburg/gbfs.json"><code>gbfs.json</code></a> (GBFS-Version 2.3, <a href="https://creativecommons.org/publicdomain/zero/1.0/"><code>CC0-1.0</code></a>)</li>
 	</ul>
