Link zur Flotte Potsdam kommentiert

--- a/publish-flotte-gbfs/index.html
+++ b/publish-flotte-gbfs/index.html
@@ -88,11 +88,11 @@
 	<ul>
 		<li><a href="./flotte-brandenburg/gbfs.json"><code>gbfs.json</code></a> (GBFS-Version 2.3, <a href="https://creativecommons.org/publicdomain/zero/1.0/"><code>CC0-1.0</code></a>)</li>
 	</ul>
-	<h3>Feed der Leihräder der fLotte Potsdam</h3>
+	<!-- <h3>Feed der Leihräder der fLotte Potsdam</h3>
 		<a href="https://www.flotte-potsdam.de" rel="noreferrer noopener"><img id="flotte-potsdam-logo" style="background-color: #0087bd; padding: 8px" src="flotte-potsdam-logo.png" alt="Logo fLotte Potsdam" /></a> 
 	<ul>
 		<li><a href="./flotte-potsdam/gbfs.json"><code>gbfs.json</code></a> (GBFS-Version 2.3, <a href="https://creativecommons.org/publicdomain/zero/1.0/"><code>CC0-1.0</code></a>)</li>
-	</ul>
+	-- > </ul>
 	<footer>
 		<ul>
 			<li><a href="https://bbnavi.de/impressum/">Impressum</a></li>
